--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
+    "react-query-devtools": "^2.6.3",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.8",
