--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.14.0",
     "axios": "^1.6.7",
     "express": "^4.18.2",
     "react": "^18.2.0",
@@ -14,6 +15,7 @@
     "react-query-devtools": "^2.6.3",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.12.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
