--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.14.0",
     "axios": "^1.6.7",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
