--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@vercel/analytics": "^1.2.2",
     "antd": "^5.14.0",
     "axios": "^1.6.7",
+    "eslint": "^8.57.0",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
