--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.14.0",
     "axios": "^1.6.7",
-    "eslint": "^8.57.0",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -44,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "globals": "^15.3.0",
     "typescript": "^3.9.10"
   }
 }
