--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.14.0",
-    "axios": "^1.6.7",
-    "express": "^4.18.2",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "antd": "^5.19.1",
+    "axios": "^1.7.2",
+    "express": "^4.19.2",
     "lodash": "^4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1",
-    "recharts": "^2.12.2",
-    "styled-components": "^6.1.8",
-    "web-vitals": "^2.1.4"
+    "recharts": "^2.12.7",
+    "styled-components": "^6.1.11",
+    "web-vitals": "^4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,7 +43,9 @@
     ]
   },
   "devDependencies": {
-    "globals": "^15.3.0",
-    "typescript": "^3.9.10"
+    "globals": "^15.8.0",
+    "typescript": "^5.5.3",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4"
   }
 }
