--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "types": ["styled-components"],
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -21,7 +17,15 @@
     "jsx": "react"
   },
   "include": [
-    "src"
+    "src",
+    "api/noticeEventDetail.js",
+    "api/noticeEvent.js",
+    "api/guildRank.js",
+    "api/guildMember.js",
+    "api/guildId.js",
+    "api/guildBasicInfo.js",
+    "api/characterOcid.js",
+    "api/characterInfo.js",
+    "api/index.js"
   ]
 }
-
