--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "web-vitals": "^4.2.1"
   },
   "scripts": {
-    "start": "node proxyServer.js",
-    "dev": "concurrently \"node proxyServer.js\" \"react-scripts start\"",
+    "start": "node api/index.js",
+    "dev": "concurrently \"node api/index.js\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
