--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "start": "node proxyServer.js",
     "dev": "concurrently \"node proxyServer.js\" \"react-scripts start\"",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=FALSE react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
