--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "start": "node proxyServer.js",
     "dev": "concurrently \"node proxyServer.js\" \"react-scripts start\"",
-    "build": "GENERATE_SOURCEMAP=FALSE react-scripts build",
+    "build": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build", 
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
