fix: 배포 테스트 깃허브 액션 환경변수 변경 pem 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Copy files to EC2
         run: |
-          scp -r . ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/maple
+          scp -r . ubuntu@${{ secrets.EC2_MEZZANG_PEM }}:/home/ubuntu/maple
 
       - name: Run deploy script
         run: |
