--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.19.1",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.19.2",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
@@ -23,7 +24,7 @@
   },
   "scripts": {
     "start": "node proxyServer.js",
-    "dev": "concurrently \"node proxyServer.js\" \"react-scripts start\"",
+    "dev": "cross-env NODE_ENV=development concurrently \"node proxyServer.js\" \"react-scripts start\"",
     "build:blue": "set \"GENERATE_SOURCEMAP=false\" && rmdir /s /q build-blue && react-scripts build && move build build-blue",
     "build:green": "export GENERATE_SOURCEMAP=false && rm -rf build-green && react-scripts build && mv build build-green",
     "test": "react-scripts test",
@@ -53,6 +54,5 @@
     "typescript": "^4.9.5",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4"
-  },
-  "proxy": "http://localhost:3001"
+  }
 }
