--- a/package.json
+++ b/package.json
@@ -4,15 +4,11 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.5.2",
-    "antd": "^5.19.1",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.19.2",
     "html2canvas": "^1.4.1",
-    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
@@ -25,9 +21,8 @@
   "scripts": {
     "start": "node proxyServer.js",
     "dev": "cross-env NODE_ENV=development concurrently \"node proxyServer.js\" \"react-scripts start\"",
-    "build:blue": "set \"GENERATE_SOURCEMAP=false\" && rmdir /s /q build-blue && react-scripts build && move build build-blue",
+    "build:blue": "export GENERATE_SOURCEMAP=false && rm -rf build-blue && react-scripts build && mv build build-blue",
     "build:green": "export GENERATE_SOURCEMAP=false && rm -rf build-green && react-scripts build && mv build build-green",
-    "dev": "cross-env NODE_ENV=development concurrently \"node proxyServer.js\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -51,10 +46,10 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "concurrently": "^8.2.2",
-    "globals": "^15.8.0",
-    "typescript": "^4.9.5",
-    "webpack": "^5.92.1",
-    "webpack-cli": "^5.1.4"
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.4",
+    "typescript": "^4.9.5"
   }
 }
