--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "http-proxy-middleware": "^3.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1",
     "recharts": "^2.12.7",
