feat: dependabot 자동 머지 조건 및 그룹 설정 개선

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,19 +6,37 @@ updates:
       interval: "daily"
     open-pull-requests-limit: 10
 
-    # patch/minor만 자동 생성(major는 수동 검토 필요)
+    # major는 전부 수동 (PR은 만들되 자동머지 절대 금지)
     ignore:
       - dependency-name: "*"
         update-types: ["version-update:semver-major"]
 
-    # 묶어서 PR 줄이기
     groups:
+      # 크리티컬 런타임 (항상 수동 머지)
+      core-runtime:
+        patterns:
+          - "react"
+          - "react-dom"
+          - "react-router-dom"
+          - "react-scripts"
+          - "express"
+          - "axios"
+          - "http-proxy-middleware"
+          - "styled-components"
+
+      # 툴링/개발도구 (대부분 자동머지)
       tooling:
         patterns:
-          - "eslint*"
+          - "@eslint/*"
+          - "@eslint/js"
+          - "eslint"
+          - "eslint-*"
           - "@testing-library/*"
           - "typescript"
-          - "rollup*"
+          - "browserslist"
+          - "caniuse-lite"
+
+      # 그 외 나머지 (자동머지)
       misc:
         patterns:
           - "*"
